# spare-parts-ai-backend

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pytest.ini  requirements.txt  tsconfig.base.json  turbo.json
app/: main.py
app/agents/: responder.py
app/config/: settings.py
app/core/: exceptions.py  schemas.py
app/db/: models.py  session.py
app/ingestion/: catalog_importer.py
app/integrations/: bitrix.py  email_gateway.py  telegram.py
app/llm/: client.py  schemas.py
app/prompts/: base.py  responder.py
app/rag/: embedder.py  retriever.py  vector_store.py
app/services/: chat_service.py  notification_service.py  (+1 more)
apps/api/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/api/app/: config.py  deps.py  main.py  tenancy.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/embeddings/: __init__.py  pipeline.py
apps/api/app/llm/: __init__.py  base.py  claude.py  router.py  stub.py  yandex.py
apps/api/app/routers/: chat.py  orders.py  parts.py  tenants.py
apps/api/app/schemas/: __init__.py  chat.py  parts.py  tenant.py
apps/api/app/services/: __init__.py  parts_identify.py
apps/api/scripts/: embed_products.py  seed_products.py  test_identify_e2e.py
apps/api/tests/: conftest.py  test_health.py  test_tenant_isolation.py
docker/: Dockerfile  docker-compose.prod.yml
docs/: ADDING_TENANT.md  DEPLOYMENT.md  ROADMAP.md  architecture.md
legacy/: README.md  requirements.txt
scripts/: README.md  deploy.sh  seed_db.py
supabase/: README.md  seed.sql
(+73 files in other folders)
