[project]
name = "partsai-api"
version = "0.1.0"
description = "PartsAI backend — FastAPI, multi-tenant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "asyncpg>=0.30.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.3.0",
  "anthropic>=0.40.0",
  "openai>=1.59.0",
  "pinecone>=5.4.0",
  "python-multipart>=0.0.20",
  "structlog>=24.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
